# music-tools

./: .env_template  .gitignore  Dockerfile  MANIFEST.in  README.md  TECH_STACK.md  docker-compose.yml  get_spotify_data.sh  pyproject.toml  requirements-gen-from-req.txt  requirements-gen-from-toml.txt  requirements.txt  run_postgres_export.sh  setup.cfg  setup_postgres.sh  start_api.sh  start_dev.sh  startup.sh
docs/: redis.md
frontend/: Dockerfile  README.md
frontend/public/: index.html
frontend/src/: App.tsx  index.css  index.tsx  types.ts
frontend/src/components/: CreatePlaylist.tsx  ListView.tsx  Navbar.tsx  Pagination.tsx  SearchFilter.tsx  ViewToggle.tsx
src/app/: config.py  dependencies.py  main.py  utils.py
src/app/api/routes/: albums.py  artists.py  genres.py  playlist_creation.py  playlists.py  save_data.py  tracks.py
src/app/model/: model.py
src/app/templates/: index.html  routes.html  styles.css
src/app_config/: app_config_template.cfg  config.py  logging.conf
src/flask_app/: README.md  flask_app.py
src/flask_app/templates/: index.html
src/postgres/: README.md  postgres_driver.py  postgres_driver_test.py
src/postgres/schema/: drop_tables.sql  functions.sql  tables.sql
src/spotify/: __main__.py  create_playlists.py  spotify_get_data.py  spotify_get_data_common.py  spotify_get_data_non_async.py  spotify_models.py  spotify_playlist_maker.py  spotify_postgres_saver.py  spotify_save.py  spotify_utils.py
src/spotify/schema/: README.md  README_POSTGRES.md  create_tables.sql  drop_tables.sql
src/storage/file/: spotify_save_to_file.py
src/storage/mongo/: spotify_read_from_mongo.py  spotify_save_to_mongo.py
src/storage/postgres/: spotify_read_from_postgres.py  spotify_save_to_postgres.py
src/utils/rate_limiter/: in_memory_rate_limiter.py  rate_limiter_interface.py  redis_rate_limiter.py  test_redis_rate_limiter.py
