[build-system]
requires = ["setuptools>=70.0.0"]

[project]
name = "music-tools"
version = "0.1.0"
description = "Export data from Spotify and other apps to various formats"
readme = "README.md"
requires-python = ">=3.13.0"
dependencies = [
    "asyncpg>=0.30.0",
    "fastapi[standard]>=0.115.0",
    "flask-caching>=2.0.2",
    "flask>=2.3.2",
    "gunicorn>=22.0.0",
    "hypothesis>=6.23.3",
    "json2html>=1.3.0",
    "oauthlib>=3.2.2",
    "openpyxl>=3.1.2",
    "pip>=25.1.1",
    "psutil>=7.0.0",
    "pydantic>=2.11.5",
    "pydantic-settings>=2.9.1",
    "pymongo>=4.6.3",
    #    "pyspark>=4.0.0",
    "python3-discogs-client>=2.6",
    "redis>=5.0.1",
    "requests>=2.32.0",
    "requests-cache>=1.0.0",
    "RobotFramework>=4.1.2",
    "setuptools>=70.0.0",
    "spotipy>=2.25.1",
    "starlette>=0.38.6",
    "uvicorn>=0.34.0",
    "wheel>=0.40.0",
]

[project.optional-dependencies]
test = [
    "black[d]>=25.1.0",
    "pytest>=8.3.4",
    "pytest-asyncio>=0.25.3",
    "pytest-mock>=3.14.0"
]

[project.scripts]
spotify-export = "spotify.__main__:main"
spotify-save-to-file = "storage.file.spotify_save_to_file:main"
spotify-save-to-mongo = "storage.mongo.spotify_save_to_mongo:main"
spotify-save-to-postgres = "storage.postgres.spotify_save_to_postgres:main"

[tool.setuptools.packages.find]
where = ["src"]