;https://setuptools.pypa.io/en/latest/userguide/declarative_config.html
[metadata]
name = spotify-export
version = 0.1.0
description = Backup Spotify playlists, tracks etc
long_description = file: README.md
long_description_content_type = text/markdown; charset=UTF-8
;license_file = LICENSE
;see https://pypi.org/classifiers/
classifiers =
    Programming Language :: Python :: 3
    License :: GNU General Public License v3 (GPLv3)
    Operating System :: OS Independent
    Development Status :: 3 - Alpha
    Intended Audience :: Developers
    Intended Audience :: End Users/Desktop
    Topic :: Software Development :: Libraries :: Python Modules
    Topic :: Utilities
keywords = spotify, backup, export, lastfm, discogs, playlist, track, album, artist, library, mongodb
author = TBA
author_email = TBA
url = TBA
project_urls =
    Bug Tracker = TBA
    Documentation = TBA
    Source Code = TBA
    Download = TBA



[options]
package_dir =
    = src
packages = find:
include_package_data = True
python_requires = >=3.6
install_requires =
    Spotipy >= 2.16.1
    pymongo >= 3.11.3
    requests >= 2.25.1
    pylast >= 4.0.0
    discogs_client >= 2.2.1

[options.extras_require]
test =
    pytest >= 6.2.2

[options.entry_points]
gui_scripts =
    spotgui = app.flask_app.flask_app:main
console_scripts =
    spotgetdata = app.spotify.spotify_get_data:main
    spotsavefile = app.spotify.spotify_save_to_file:main
    spotsavemongo = app.spotify.spotify_save_to_mongo:main

[options.packages.find]
where = src
exclude = tests


